# dataprovider_staking

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  vercel.json
programs/dataprovider_staking/: Cargo.toml
programs/dataprovider_staking/src/: add_pool.rs  claim_rewards.rs  constants.rs  deposit_rewards.rs  error.rs  initialize.rs  lib.rs  stake.rs  state.rs  unstake.rs  update_admin.rs
programs/dataprovider_staking/tests/: test_initialize.rs  test_staking_flow.rs
programs/dataprovider_staking/tests/common/: mod.rs
scripts/: deploy.sh  package.json  tsconfig.json
scripts/src/: cli.ts  context.ts  convert-private-key.ts  test-devnet.ts
sdk/: package.json  tsconfig.json
sdk/idl/: dataprovider_staking.json
sdk/src/: client.ts  constants.ts  idl-types.ts  index.ts  pda.ts
web/: .env.local.example  next.config.js  package.json
web/public/: ghc1chem.avif
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/components/: PoolCard.tsx  SiteFooter.tsx
web/src/lib/: brands.ts  config.ts  format.ts  okxWalletAdapter.ts  useStakingClient.ts
