[package]
name = "dataprovider_staking"
version = "0.1.0"
description = "GHC1CHEM multi-mint staking with USDC dividend distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dataprovider_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = "1.0.0"

[dev-dependencies]
litesvm = "0.10.0"
litesvm-token = { version = "0.10.0", features = ["token-2022"] }
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-pubkey = "3.0.0"
solana-instruction = "3.0.0"
solana-system-interface = "2.0.0"
solana-sysvar = "3.1.0"
solana-program-pack = "3.1.0"
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
spl-associated-token-account-client = "2.0.0"
borsh = "1.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
